--- a/src/CSS Components/Portfolio.css
+++ b/src/CSS Components/Portfolio.css
@@ -1,4 +1,5 @@
 #portfolio {
+  padding: 0 !important;
 }
 .portfolio-container {
   display: flex;
